Formatted mobile layout

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,12 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+   
+.content-wrapper {
+width: 90%;
+margin: 50px 0;
+}
+
 
  /* -------------------- Base Header - Footer Styles -------------------- */
 
@@ -94,13 +100,24 @@ header, footer {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  }
+}
+
+header {
+  padding: 15px 0; 
+}
 
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+.header-divider {
+width: 100%;
+height: 1px;
+margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -108,11 +125,17 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+
+footer {
+  flex-direction: column;
 }
 
 footer .social-icons {
@@ -121,10 +144,27 @@ footer .social-icons {
   align-items: center;
 }
 
-footer .social p {
+footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .contact {
+  margin-bottom: 50px;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .copyright {
+margin: 20px 0;
 }
 
 
@@ -155,11 +195,24 @@ aside {
   flex-flow: row wrap;
 }
 
+.features h2 {
+  margin-bottom: 60px;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.features p {
+  margin: 0;
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
 }
 
 /* Reviews */
@@ -169,6 +222,15 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
 
 
@@ -188,6 +250,10 @@ aside {
   flex-flow: row wrap;
 }
 
+.contact-content p {
+margin: 0;
+}
+
 
 /* -------------------- FAQ page -------------------- */
 
@@ -203,6 +269,15 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
+}
+
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
 }
 
 
@@ -294,16 +369,7 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
+  
 
 /* ==========================================================================
    Print styles.
