--- a/css/main.css
+++ b/css/main.css
@@ -87,9 +87,58 @@ textarea {
    Author's custom styles
    ========================================================================== */
    
+
+   /* General Styles */
+ 
+html {
+	font-size: 16px;
+}
+ 
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  text-align: left;
+}
+ 
+ul, 
+ol {
+ list-style-type: none;
+}
+ 
+a {
+	color: #e2e3ed;
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 3em;
+  line-height: 48px;
+}
+ 
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+}
+ 
+h3, 
+h4 {
+  font-family: 'Poppins', sans-serif;
+  margin: 20px 0;
+  font-size: 1.125em;
+}
+ 
+p {
+	font-size: 0.875 em;
+  line-height: 1.285;
+}
+ 
+address {
+ font-style: normal;
+}
+ 
 .content-wrapper {
-width: 90%;
-margin: 50px 0;
+  width: 90%;
+  margin: 50px 0;
 }
 
 
