Made images responsive, added more styles

--- a/css/main.css
+++ b/css/main.css
@@ -110,11 +110,6 @@ a {
 	color: #e2e3ed;
   text-decoration: none;
 }
-
-h1 {
-  font-size: 3em;
-  line-height: 48px;
-}
  
 h2 {
   font-family: 'Poppins', sans-serif;
@@ -137,6 +132,14 @@ p {
  
 address {
  font-style: normal;
+}
+
+img { 
+	width: 100%;
+}
+ 
+figure {
+  margin: 0;
 }
 
 content-wrapper {
@@ -194,6 +197,14 @@ header nav ul li {
   font-size: 1.125em;
 }
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 footer {
   flex-direction: column;
   text-align: center;
@@ -238,6 +249,9 @@ margin: 20px 0;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../assets/hero-image.jpg') center no-repeat #333;
+  background-size: cover;
+  min-height: 500px;
 }
 
 .hero-area h1 {
@@ -289,6 +303,8 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: url('../assets/main.jpg') center no-repeat #333;
+  background-size: cover;
 }
 
 .features h2 {
@@ -316,7 +332,6 @@ input[type=button] {
 .reviews {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-flow: row wrap;
   background: #2a423a; 
 }
@@ -484,6 +499,16 @@ margin: 0;
   margin: 100px 0;
 }
 
+h2 {
+  font-size: 2.25em;
+  line-height: 1.333;
+}
+
+h3 {
+  font-size: 1.5em;
+  line-height: 1.25;
+}
+
 /* Header */
 
 header {
@@ -494,6 +519,10 @@ padding: 33px 0;
 header .content-wrapper {
   width: 100%;
   justify-content: space-between;
+}
+
+header figure {
+  width: 30%;
 }
 
 header nav {
@@ -510,7 +539,18 @@ justify-content: space-between;
 
 /* Hero Area */
 
+.hero-area {
+  min-height: 600px;
+}
+
+.hero-area h1 {
+  font-size: 3em;
+  line-height: 1;
+  margin: 0;
+}
+
 /* Aside */
+
 aside .content-wrapper {
   margin: 50px 0;
   display: flex;
@@ -525,6 +565,10 @@ aside .content-wrapper .form {
 }
 
 /* Features */
+
+.features h2 {
+  margin-bottom: 20px;
+}
 
 .features article {
 display: flex;
@@ -544,8 +588,17 @@ display: flex;
 justify-content: space-between;
 }
 
-.reviews article div {
+.reviews article div, .reviews article figure {
   width: 49%;        
+}
+
+.reviews h2 {
+  width: 85%;
+}
+
+.reviews h3 {
+  width: 75%;
+  margin: 0;
 }
 
 /* Footer */
@@ -564,6 +617,15 @@ footer .contact {
   margin-bottom: 0;
 }
 
+footer h4 {
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+
+footer p {
+  line-height: 1.285;
+}
+
 footer .copyright {
   width: 100%;
 }
@@ -573,41 +635,50 @@ footer .copyright {
    About Page
    ========================================================================== */
  
-   .mission-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px; 
+.mission-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px; 
 }
 
 .mission-content p {
-    width: 45%;
+  width: 45%;
 }
 
 .contact-section .content-wrapper h2 {
-    width: 80%;
+  width: 80%;
 }
 
 .contact-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.contact-content h4 {
+  font-size: 1.5em;
 }
 
 
 /* ==========================================================================
    FAQ Page
    ========================================================================== */
-   .faq .content-wrapper {
-    justify-content: space-between;
+.faq .content-wrapper {
+justify-content: space-between;
 }
 
 .faq-content {
-    flex-basis: 40%;
+flex-basis: 40%;
 }
 
 .faq h2 {
-    width: 100%;
+width: 100%;
+}
+
+.faq h4, .faq p {
+font-size: .875em;
+line-height: 1.125;
 }
 
 }
@@ -617,15 +688,36 @@ footer .copyright {
 /*Desktop styles here */  
 
 .content-wrapper {
-  max-width: 960px;
+max-width: 960px;
+}
+
+header {
+padding: 15px 0;
+}
+
+h2 {
+font-size: 2.25em;
+}
+
+h3,
+h4 {
+font-size: 1.875em;
+}
+
+p {
+font-size: 1.125em;
+line-height: 1.333;
 }
 
 /* Hero */
+
 .hero-area h1 {
- width: 60%;
+font-size: 3.75em;
+width: 80%;
 }
 
 /* Aside */
+
 aside .content-wrapper {
  justify-content: space-around
 }
@@ -635,7 +727,12 @@ aside .content-wrapper .form {
  width: 30%;
 }
 
+.form-description p {
+ font-size: 1.125em;
+}
+
 /* Features */
+
 .features h2 {
  width: 90%;
 }
@@ -645,8 +742,17 @@ aside .content-wrapper .form {
 }
 
 /* Reviews */ 
+
 .reviews article div {
  width: 42%;
+}
+
+.reviews h2 {
+  padding-bottom: 50px;
+}
+
+footer h4 {
+  font-size: 1.875em;
 }
 
 /* ==========================================================================
@@ -655,6 +761,11 @@ About Page
 .mission h2,
 .contact-section .content-wrapper h2 {
  width: 92%;
+ font-size: 3em;
+}
+
+.contact-content h4 {
+  font-size: 1.875em;
 }
 
 /* ==========================================================================
@@ -663,6 +774,11 @@ FAQ Page
 .faq h2 {
  width: 100%;
 }
+
+.faq h4, .faq p {
+  font-size: 1.125em;
+  line-height: 1;
+  }
 
 }
 
