--- a/css/main.css
+++ b/css/main.css
@@ -676,6 +676,10 @@ footer .copyright {
   font-size: 1.5em;
 }
 
+.map-figure {
+  padding-bottom: 45.5%;
+}
+
 
 /* ==========================================================================
    FAQ Page
@@ -782,6 +786,10 @@ About Page
 
 .contact-content h4 {
   font-size: 1.875em;
+}
+
+.map figure {
+  padding-bottom: 37.5%;
 }
 
 /* ==========================================================================
