Added social media icons to all three pages

--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,14 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+  background-color: #527158;
+  width: 40px;
+  height: 40px;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .contact {
@@ -603,6 +611,10 @@ flex-basis: 50%;
   width: 50%;
 }
 
+.features i {
+  margin-bottom: 30px;
+}
+
 /* Reviews */
 .reviews article {
 display: flex;
@@ -645,6 +657,11 @@ footer h4 {
 
 footer p {
   line-height: 1.285;
+}
+
+footer .social-icons {
+  width: 12.5em;
+  justify-content: space-between;
 }
 
 footer .copyright {
